makes adjustments to modal overlay to improve issues with blurry text

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -3,6 +3,7 @@ $green: hsl(147, 82%, 33%);
 
 
 * {
+	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
@@ -20,11 +21,15 @@ html, body {
 
 
 .container {
-	width: 100%;
+	/* width: 100%;
 	height: 100%;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
+	width: 100vw;
+	height: 100vh;
+	display: grid;
+	place-items: center;
 }
 
 
@@ -139,7 +144,7 @@ html, body {
 		background: $green;
 		border-radius: 14px;
 		color: #fff;
-		padding: 12px 18px;
+		padding: 12px 18px 14px;
 
 		&:hover {
 			background: lighten($green, 3%);
@@ -330,18 +335,19 @@ footer {
 }
 
 
-@media all and (min-width: 440px) and (min-height: 425px) {
+@media all and (min-width: 600px) and (min-height: 450px) {
 	.what-modal {
 		position: fixed;
 		top: 50%;
 		left: 50%;
 		width: 85%;
 		max-width: 500px;
-		height: auto;
-		transform: translateX(-50%) translateY(-50%);
+		height: 414px; /* prevents blurry text on scale transformation */
+		transform: translate3d(-50%, -50%, 0);
 	}
 
 	.md-content {
+		height: 414px;
 		border-radius: 8px;
 	}
 }
